force-app/main/default/objects/Button_Tasks__c.object
<CustomObject>
    <fields>
        <fullName>Candiate_Email__c</fullName>
        <label>Candiate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Button Tasks</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BT-{000}</displayFormat>
        <label>Button Tasks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Button Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>